# Sentinel-Testing-Agent

./: .gitignore  BUILD.md  README.md  Sentinel_Low_Level_Design.md  Sentinel_Requirement_Document.md  pyproject.toml
.claude/: launch.json
skills/odoo-qa/: SKILL.md
src/sentinel/: __init__.py  cli.py  paths.py
src/sentinel/audit/: __init__.py  models.py  runner.py  verify.py
src/sentinel/core/: __init__.py  models.py
src/sentinel/engine/: __init__.py  claude_code.py  skill.py
src/sentinel/execute/: __init__.py  generate.py  models.py  provision.py  report.py  runner.py  ui_playwright.py
src/sentinel/odoo/: __init__.py  addon_scan.py  context.py  deployment.py  introspect.py  investigate.py  report.py  rpc.py  schema.py
src/sentinel/web/: __init__.py  app.py  auth.py
src/sentinel/web/static/: index.html
tests/unit/: test_audit.py  test_execute.py  test_investigate.py  test_summary.py  test_verify.py
